# gb_hard_moments

./: .gitignore  CMakeLists.txt  PhoneBook.txt  conanfile.txt  lesson1.cpp  lesson1.h  lesson2.cpp  lesson3.cpp  lesson4.cpp  lesson5.cpp  lesson6.cpp  lesson7.cpp  lesson8.cpp  main.cpp
